# palindrome

./: Cargo.toml  DESIGN.md  PROGRESS.md  README.md  RISA.md  SDM.md  TODO.md
examples/: fibonacci.pvm  reversible_add.pvm  reversible_memory.pvm  simple_test.pvm  trail_vs_reversible.pvm
src/: lib.rs
src/compiler/: mod.rs  parser.rs
src/instruction/: mod.rs
src/tape/: core.rs  mod.rs  segment.rs
src/tape/sdm/: address_space.rs  backends.rs  mod.rs  page_table.rs  policy.rs  predictor.rs
src/vm/: executor.rs  mod.rs  registers.rs
